[package]
name = "finance"
version = "0.1.0"
authors = ["Luís Mendes <luisgbm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"