[package]
name = "finance"
version = "0.1.0"
authors = ["Luís Mendes <luisgbm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
rocket_cors = "0.5.1"
serde_json = "1.0"
dotenv = "0.15.0"
jsonwebtoken = "7"
chronoutil = "0.2.1"

[dependencies.diesel-derive-enum]
version = "1"
features = ["postgres"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "chrono"]