[package]
name = "finance"
version = "1.0.2"
authors = ["Luís Mendes <luisgbm@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_cors = "0.5.1"
rocket_codegen = "0.4.7"
serde_json = "1.0"
jsonwebtoken = "7"
chronoutil = "0.2.1"

[dependencies.diesel-derive-enum]
version = "1"
features = ["postgres"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "diesel_postgres_pool"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "chrono", "r2d2"]
