[package]
name = "finance-tauri"
version = "0.1.0"
description = "Finance desktop POC (Tauri + embedded SQLite, native IPC commands)"
authors = ["Luís Mendes <luisgbm@gmail.com>"]
edition = "2021"

[lib]
# The desktop binary (main.rs) links against this lib; the mobile/staticlib/cdylib crate
# types are the Tauri v2 convention. The name is referenced from main.rs as
# `finance_tauri_lib::run()`.
name = "finance_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# Desktop hardening plugins: file logging and a single-instance guard.
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
# Lightweight logging facade captured by tauri-plugin-log (replaces tracing-subscriber).
log = "0.4"
# Native message dialog for fatal startup errors, shown before the window/event loop exists
# (so tauri-plugin-dialog's main-thread-dispatched blocking_show would deadlock here).
rfd = { version = "0.15", default-features = false }
# SQLite driver, statically bundled (the `sqlite` feature compiles SQLite from source), so
# the finished .exe needs no external database DLL. Function-form queries only -> no `macros`.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chronoutil = "0.2"
# Replaces the Postgres pgcrypto-based password hashing with an in-process bcrypt.
bcrypt = "0.15"
thiserror = "2"
anyhow = "1"

[profile.release]
# Smaller, self-contained release binary.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
# Async test runtime for the integration test (which drives the service/db layer directly).
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
